syntax = "proto3";

package pb;

option go_package = "./pb";

message User{
    int64 user_id = 1;
    string user_name = 2;
}

message AddUserRequest{
    User user = 1;
}

message AddUserResponse{
    bool status = 1;
}

message GetUserRequest{
    int64 user_id = 1;
}

message GetUserResponse{
    User user = 1;
}

service Service{
    rpc AddUserService(AddUserRequest) returns (AddUserResponse);
    rpc GetUserService(GetUserRequest) returns (GetUserResponse);
}